--- a/ProjectManagement/Views/Shared/_LoginPartial.cshtml
+++ b/ProjectManagement/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,10 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a class="nav-link" href="/Dashboard/Index" title="Dashboard">@User.Identity.Name</a>
+        <a class="nav-link" href="/Projects/Features" title="Dashboard">
+            <i class="fal fa-user"></i>
+            @User.Identity.Name
+        </a>
     </li>
     <li class="nav-item">
         <form asp-controller="Account" asp-action="Logout" method="post" id="logoutForm">
