--- a/ProjectManagement/Views/Projects/Features.cshtml
+++ b/ProjectManagement/Views/Projects/Features.cshtml
@@ -1,7 +1,6 @@
-﻿@model IEnumerable<ProjectSectorViewModel>  
+﻿@model IEnumerable<ProjectSectorViewModel>
 @{
     ViewData["Title"] = "Features";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <div class="container">
@@ -16,6 +15,58 @@
                 </li>
             }
         </ul>
+
+
+
+        <div class="row">
+            <div class="col-lg-4 col-md-12 mb-4">
+                <div class="media blue lighten-2 text-white z-depth-1 rounded">
+                    <div class="media-body p-3">
+                        <p class="mb-0">
+                            Activism along the Agricultural,Fishery, Dairy and Horticulture Value Chain
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <!--Grid column-->
+            <!--Grid column-->
+            <div class="col-lg-4 col-md-6 mb-4">
+
+                <div class="media deep-purple lighten-2 text-white z-depth-1 rounded">
+                    <i class="fas fa-chart-bar fa-3x deep-purple z-depth-1 p-4 rounded-left text-white"></i>
+                    <div class="media-body">
+                        <p class="text-uppercase mt-2 mb-1 ml-3"><small>Traffic</small></p>
+                        <p class="font-weight-bold mb-1 ml-3">323 540</p>
+                        <div class="progress md-progress mb-0 rounded-0">
+                            <div class="progress-bar deep-purple darken-3" role="progressbar" style="width: 76%" aria-valuenow="76"
+                                 aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <p class="ml-3 mb-0"><small>76% increase</small></p>
+                    </div>
+                </div>
+
+
+            </div>
+            <!--Grid column-->
+            <!--Grid column-->
+            <div class="col-lg-4 col-md-6 mb-4">
+
+                <div class="media pink lighten-2 text-white z-depth-1 rounded">
+                    <i class="fas fa-download fa-3x pink z-depth-1 p-4 rounded-left text-white"></i>
+                    <div class="media-body">
+                        <p class="text-uppercase mt-2 mb-1 ml-3"><small>downloads</small></p>
+                        <p class="font-weight-bold mb-1 ml-3">13 540</p>
+                        <div class="progress md-progress mb-0 rounded-0">
+                            <div class="progress-bar pink darken-4" role="progressbar" style="width: 24%" aria-valuenow="24"
+                                 aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <p class="ml-3 mb-0"><small>24% increase</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 </div>
 
