--- a/ProjectManagement/Views/Projects/Features.cshtml
+++ b/ProjectManagement/Views/Projects/Features.cshtml
@@ -2,71 +2,34 @@
 @{
     ViewData["Title"] = "Features";
 }
-
+@section Styles
+{
+    <style>
+        .features-item { min-height: 250px; }
+        .page-header { font-weight: bold; }
+        .media .media-body p { font-size: 1.1rem; line-height: 1.9rem; }
+    </style>
+}
 <div class="container">
-    <h4 class="page-header mb-3">Features List</h4>
-    <div class="card card-body">
-        <ul class="list-group list-group-flush">
-            @foreach (var item in Model)
-            {
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <span>@item.Sector</span>
-                    <a href="/Projects/AddProject/@item.ProjectSectorId"><i class="fas fa-plus"></i> Add Project</a>
-                </li>
-            }
-        </ul>
+    <h4 class="page-header my-4">FEATURES LIST</h4>
 
-
-
-        <div class="row">
+    <div class="row">
+        @foreach (var item in Model)
+        {
             <div class="col-lg-4 col-md-12 mb-4">
-                <div class="media blue lighten-2 text-white z-depth-1 rounded">
-                    <div class="media-body p-3">
-                        <p class="mb-0">
-                            Activism along the Agricultural,Fishery, Dairy and Horticulture Value Chain
+                <a href="/Dashboard/Index/@item.ProjectSectorId">
+                    <div class="media stylish-color-dark z-depth-1 rounded h-100 align-items-center">
+                        <div class="media-body p-4 text-center text-white">
+                            <p class="mb-0">
+                                @item.Sector
+                            <i class="far fa-long-arrow-alt-right"></i>
                         </p>
-                    </div>
-                </div>
-            </div>
-            <!--Grid column-->
-            <!--Grid column-->
-            <div class="col-lg-4 col-md-6 mb-4">
-
-                <div class="media deep-purple lighten-2 text-white z-depth-1 rounded">
-                    <i class="fas fa-chart-bar fa-3x deep-purple z-depth-1 p-4 rounded-left text-white"></i>
-                    <div class="media-body">
-                        <p class="text-uppercase mt-2 mb-1 ml-3"><small>Traffic</small></p>
-                        <p class="font-weight-bold mb-1 ml-3">323 540</p>
-                        <div class="progress md-progress mb-0 rounded-0">
-                            <div class="progress-bar deep-purple darken-3" role="progressbar" style="width: 76%" aria-valuenow="76"
-                                 aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-                        <p class="ml-3 mb-0"><small>76% increase</small></p>
-                    </div>
                 </div>
-
-
-            </div>
-            <!--Grid column-->
-            <!--Grid column-->
-            <div class="col-lg-4 col-md-6 mb-4">
-
-                <div class="media pink lighten-2 text-white z-depth-1 rounded">
-                    <i class="fas fa-download fa-3x pink z-depth-1 p-4 rounded-left text-white"></i>
-                    <div class="media-body">
-                        <p class="text-uppercase mt-2 mb-1 ml-3"><small>downloads</small></p>
-                        <p class="font-weight-bold mb-1 ml-3">13 540</p>
-                        <div class="progress md-progress mb-0 rounded-0">
-                            <div class="progress-bar pink darken-4" role="progressbar" style="width: 24%" aria-valuenow="24"
-                                 aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <p class="ml-3 mb-0"><small>24% increase</small></p>
-                    </div>
-                </div>
-            </div>
+            </a>
         </div>
-
-
+    }
     </div>
 </div>
+
 
