--- a/ProjectManagement/Views/Shared/_AdminLayout.cshtml
+++ b/ProjectManagement/Views/Shared/_AdminLayout.cshtml
@@ -34,28 +34,7 @@
 
     <div id="sidedrawer" class="d-print-none z-depth-1">
         <Partial Name="_AdminLoginPartial" />
-        <ul id="menuItem">
-            <li>
-                <strong>
-                    <span class="fas fa-tachometer-alt"></span>
-                    <a class="links" href="/Dashboard/Index">Dashboard</a>
-                </strong>
-            </li>
-            <li>
-                <strong>
-                    <span class="fas fa-cog">
-                    </span><i class="fas fa-caret-right"></i>Settings
-                </strong>
-                <ul class="sub-menu">
-                    <li><a class="links" href="/Settings/ProjectStatus">Project Status</a></li>
-                    <li><a class="links" href="/Settings/ProjectDonor">Project Donor</a></li>
-                    <li><a class="links" href="/Settings/BeneficiaryType">Project Beneficiary</a></li>
-                    <li><a class="links" href="/Settings/Country">Country</a></li>
-                    <li><a class="links" href="/Settings/State">State</a></li>
-                    <li><a class="links" href="/Settings/City">City</a></li>
-                </ul>
-            </li>
-        </ul>
+        <Partial Name="_Side_navbar" model="@ViewContext.RouteData.Values["id"]" />
     </div>
 
     <main id="content-wrapper">
@@ -79,8 +58,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <!--scroll-->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.7.6/jquery.nicescroll.min.js"></script>
-    <!-- axios -->
-    <script src="~/lib/api.axios.min.js"></script>
+    <!-- autocomplete -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.min.js"></script>
 
     <!-- MDB core JavaScript -->
     <script src="~/mdb/js/mdb-admin.min.js?v=1"></script>
@@ -89,8 +68,8 @@
     <!--moment js-->
     <script src="~/js/moment.js"></script>
     <!--sidebar-->
-<script src="https://cdn.muicss.com/mui-latest/js/mui.min.js"></script>
-<script src="~/js/sidedrawer-links.js"></script>
+    <script src="https://cdn.muicss.com/mui-latest/js/mui.min.js"></script>
+    <script src="~/js/sidedrawer-links.js"></script>
     <script src="~/js/sidedrawer-show-hide.js"></script>
 
     <!-- others js -->
