login name change to index

--- a/ProjectManagement/Views/Projects/Features.cshtml
+++ b/ProjectManagement/Views/Projects/Features.cshtml
@@ -7,6 +7,7 @@
     <style>
         .features-item { min-height: 250px; }
         .page-header { font-weight: bold; }
+        .media { background-color: #189cc4 }
         .media .media-body p { font-size: 1.1rem;}
     </style>
 }
@@ -19,7 +20,7 @@
         {
             <div class="col-lg-3 mb-4">
                 <a href="/Dashboard/Index/@item.ProjectSectorId">
-                    <div class="media stylish-color-dark z-depth-1 rounded h-100 align-items-center">
+                    <div class="media z-depth-1 rounded h-100 align-items-center">
                         <div class="media-body p-3 text-center text-white">
                             <p class="mb-0">
                                 @item.Sector
