--- a/ProjectManagement/Views/Shared/_LoginPartial.cshtml
+++ b/ProjectManagement/Views/Shared/_LoginPartial.cshtml
@@ -24,7 +24,7 @@
 else
 {
     <li class="nav-item">
-        <a class="nav-link" href="/Account/Login"><i class="fal fa-sign-in mr-1"></i>Login</a>
+        <a class="nav-link" href="/Account/Index"><i class="fal fa-sign-in mr-1"></i>Login</a>
     </li>
 }
 
