--- a/ProjectManagement/Views/Account/Index.cshtml
+++ b/ProjectManagement/Views/Account/Index.cshtml
@@ -26,7 +26,7 @@
                         <strong class="dark-grey-text font-weight-bold">Login</strong>
                     </h3>
 
-                    <form asp-route-returnUrl="@ViewBag.ReturnUrl" class="form-signin" asp-controller="Account" asp-action="Login" method="post">
+                    <form asp-route-returnUrl="@ViewBag.ReturnUrl" class="form-signin" asp-controller="Account" asp-action="Index" method="post">
                         <div class="md-form mb-5 pb-3">
                             <i class="fas fa-user prefix grey-text"></i>
                             <input asp-for="UserName" class="form-control" required>
