--- a/ProjectManagement/Views/Shared/_Layout.cshtml
+++ b/ProjectManagement/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Project Management</title>
+    <title>@ViewData["Title"] - Management information system (MIS)</title>
 
     <!-- Font Awesome -->
     <link href="https://pro.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet" />
@@ -21,7 +21,7 @@
     <header>
         <nav class="mb-1 navbar navbar-expand-lg navbar-dark">
             <div class="container">
-                <a class="navbar-brand" href="#">Project Management</a>
+                <a class="navbar-brand" href="/Account">Management information system (MIS)</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -41,7 +41,7 @@
     <footer class="page-footer font-small wow fadeIn mt-4">
         <div class="footer-copyright text-center py-3">
             © @DateTime.Now.Year Copyright:
-            <a href="">projectmanagement.com</a>
+            <a href="">Management information system (MIS)</a>
         </div>
     </footer>
 
