--- a/ProjectManagement/Views/Projects/Features.cshtml
+++ b/ProjectManagement/Views/Projects/Features.cshtml
@@ -12,8 +12,8 @@
     </style>
 }
 
-<div class="container">
-    <h4 class="page-header my-4">FEATURES LIST</h4>
+<div class="container">     
+    <h4 class="page-header my-4">PROJECT SECTORS</h4>
 
     <div class="row">
         @foreach (var item in Model)
