--- a/ProjectManagement/Views/Shared/_AdminLayout.cshtml
+++ b/ProjectManagement/Views/Shared/_AdminLayout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewData["Title"] - Project Management</title>
+    <title>@ViewData["Title"] - Management information system (MIS)</title>
 
     <!-- font awesome -->
     <link href="https://pro.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet" />
@@ -26,7 +26,7 @@
                 <div>
                     <a class="sidedrawer-toggle d-md-none js-show-sidedrawer d-print-none"><i class="fas fa-bars"></i></a>
                     <a class="sidedrawer-toggle d-none d-md-inline-block js-hide-sidedrawer d-print-none"><i class="fas fa-bars"></i></a>
-                    <span class="navbar-brand ml-1">Project Management</span>
+                    <span class="navbar-brand ml-1">Management information system (MIS)</span>
                 </div>
             </div>
         </nav>
@@ -46,7 +46,7 @@
     <footer class="page-footer font-small wow fadeIn mt-4">
         <div class="footer-copyright text-center py-3">
             © @DateTime.Now.Year Copyright:
-            <a href="">projectmanagement.com</a>
+            <a href="">Management information system (MIS)</a>
         </div>
     </footer>
 
