report type update error fix

--- a/ProjectManagement/Views/Settings/ReportType.cshtml
+++ b/ProjectManagement/Views/Settings/ReportType.cshtml
@@ -114,8 +114,8 @@
             evt.preventDefault();
 
             const model = {
-                ProjectStatusId: this.hiddenUpdateId.value,
-                Status: this.updateReportName.value
+                ReportTypeId: this.hiddenUpdateId.value,
+                ReportName: this.updateReportName.value
             }
 
             $.ajax({
