--- a/ProjectManagement/Views/Projects/AddProject.cshtml
+++ b/ProjectManagement/Views/Projects/AddProject.cshtml
@@ -70,10 +70,11 @@
 
             <div class="row">
                 <div class="col-lg-5">
-                    <div class="md-form">
+                    <div class="md-form mb-0">
                         <input type="text" id="inputDonors" class="form-control">
                         <label for="inputDonors">Donor</label>
                     </div>
+                    <div id="donor-container" class="mb-4"></div>
                 </div>
                 <div class="col-lg-7">
                     <div class="md-form">
