--- a/ProjectManagement/Views/Shared/_Side_navbar.cshtml
+++ b/ProjectManagement/Views/Shared/_Side_navbar.cshtml
@@ -8,20 +8,55 @@
     </li>
     <li>
         <strong>
-            <span class="fas fa-file-plus"></span>
-            <a class="links" href="/Projects/AddProject/@Model">Project Information</a>
+            <span class="fas fa-file-plus">
+            </span><i class="fas fa-caret-right"></i>Project
         </strong>
+        <ul class="sub-menu">
+            <li><a class="links" href="/Projects/AddProject/@Model">Project Entry</a></li>
+            <li><a class="links" href="#">Project List</a></li>
+            <li><a class="links" href="#">Report</a></li>
+        </ul>
     </li>
     <li>
         <strong>
             <span class="fas fa-chart-pie"></span>
-            <a class="links" href="#">Work Plan & Budget</a>
+            <a class="links" href="#">Work plan & Budget</a>
         </strong>
     </li>
     <li>
         <strong>
             <span class="fas fa-database"></span>
             <a class="links" href="#">Project Log Frame</a>
+        </strong>
+    </li>
+    <li>
+        <strong>
+            <span class="fas fa-user-tie"></span>
+            <a class="links" href="#">Project Employee/ focal</a>
+        </strong>
+    </li>
+    <li>
+        <strong>
+            <span class="fas fa-user-check"></span>
+            <a class="links" href="#">Beneficiary</a>
+        </strong>
+    </li>
+    <li>
+        <strong>
+            <span class="fas fa-file-alt"></span>
+            <a class="links" href="#">Survey Form</a>
+        </strong>
+    </li>
+    <li>
+        <strong>
+            <span class="fas fa-map-marker-alt"></span>
+            <a class="links" href="#">Map</a>
+        </strong>
+    </li>
+    <li>
+        <strong>
+            <span class="fas fa-chart-bar"></span>
+            <a class="links" href="#">GANTT Chart</a>
         </strong>
     </li>
     <li>
